Use modern Java 16+ .toList() for Java 21 project instead of Collectors.toList()
Co-authored-by: carstenartur <3164220+carstenartur@users.noreply.github.com>